Fix alignment in upcoming livestream claim preview

--- a/ui/scss/component/_claim-preview.scss
+++ b/ui/scss/component/_claim-preview.scss
@@ -774,10 +774,13 @@
   }
 
   @media (max-width: $breakpoint-small) {
-    font-size: 14px;
+    font-size: var(--font-small);
 
     .claim-preview-metadata {
       .claim-tile__info {
+        .channel-thumbnail {
+          margin-bottom: 5px;
+        }
         .media__subtitle {
           margin-bottom: 2px;
         }
